[metadata]
name = dbutler
version = attr: src.__version__
description = A Make like python tool for managing databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rena2damas/dbutler
keywords = dbutler
author = Renato Damas
author_email = rena2damas@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
platforms = any

[options]
packages = find:
install_requires =
    Click
    shell

[options.entry_points]
console_scripts =
    dbutler = src:init
